--- a/Feedback/templates/email.html
+++ b/Feedback/templates/email.html
@@ -1,7 +1,7 @@
-Hello {{ user | title }}!<br>
+Hello {{ user | title }}!
 
-<br>Thank you for your feedback! We would love to see it and resolve any issues you might have.
+Thank you for your feedback! We would love to see it and resolve any issues you might have.
  Your feedback helps us to make improvements in the site so that you might feel more organised. <br><br>
 
-Happy Task Managing!<br>
+Happy Task Managing!
 
