--- a/Feedback/templates/email.html
+++ b/Feedback/templates/email.html
@@ -4,4 +4,4 @@ Thank you for your feedback! We would love to see it and resolve any issues you 
 Your feedback helps us to make improvements in the site so that you might feel more organised.
 
 Happy Task Managing!
-
+From Developer
