--- a/Feedback/templates/del.html
+++ b/Feedback/templates/del.html
@@ -4,7 +4,7 @@
 	
 <form method="POST" action="">
 	{% csrf_token %}
-	<textarea class="form-control" id="feed" rows="3" placeholder="Enter your feedback"></textarea>
+	<textarea class="form-control" name="feed" rows="3" placeholder="Enter your feedback"></textarea>
 	<input type="submit" value="Post Feedback" class="btn btn-info">
 	<div class="d-grid gap-2">
 		<a href="{% url 'index' %}" class="btn btn-secondary">Go Back</a>
