--- a/members/templates/registration/cancel_email.html
+++ b/members/templates/registration/cancel_email.html
@@ -3,5 +3,8 @@ Hello {{ user | title }}
 Your account has been deleted successfully as well as your Workspace and data! 
 Your email account will also be deleted from our database... Be assured!
 
+If you have any complaint for which you left, feel free to mention theem at: 
+https://dj-taskapp.herokuapp.com/user_feedback_on_delete/
+
 Hope to see you again!
 
