--- a/Feedback/templates/feedback_revert.html
+++ b/Feedback/templates/feedback_revert.html
@@ -7,7 +7,7 @@
 {% else %}
 <div class="center-column">
 	
-<h4><center>Your Feedback was Submitted Successfully! We will look into it and will try to resolve any problems if mentioned</center></h4>
+<h4><center>Your Feedback was Submitted Successfully! We will look into it and will try to resolve any problems if mentioned!!</center></h4>
 {% endif %}
 {% endblock %}
 
