--- a/Task/templates/task/index.html
+++ b/Task/templates/task/index.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="center-column">
-
+Want to check more of our Products? Check our <a href="https://opensourceweather.herokuapp.com"> Weather App</a> and our <a href="https://typeandenter.herokuapp.com">Search Engine</a> and our <a href="https://opensourcedictionary.herokuapp.com"> Dictionary App</a>!! 
+<br><br>
 <form method="POST" action="">
 	<div class="card">
 		<br><div class="container">
