--- a/Task/templates/navbar.html
+++ b/Task/templates/navbar.html
@@ -17,7 +17,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'create-index' %}">FeedBack List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'api-list' %}">Your List API</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'api' %}">Json or API mode</a>
         </li>
        
       </ul>
