--- a/Task/templates/task/api_file.html
+++ b/Task/templates/task/api_file.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="center-column">
 Want to learn about Json here? Want to type Json for your Tasks to get Created or Updated? This is an API or Json Wing of the app,
-written with the help of <a href="https://www.django-rest-framework.com/">Django REST framework</a>. The notable urls are:
+written with the help of <a href="https://www.django-rest-framework.org/">Django REST framework</a>. The notable urls are:
 <br><br>
 <ul>
     <li><a href="{% url 'api-list' %}">View your Task List's API or Json Format</a></li>
