added search and csv files download and improved UI

--- a/Task/templates/navbar.html
+++ b/Task/templates/navbar.html
@@ -7,8 +7,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Home
+          </a>
+          
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{% url 'index' %}">Your List</a></li>
+            <li><hr class="dropdown-divider"></li>
+            
+            <li><a class="dropdown-item" href="#">Options =></a></li>
+            
+            <li><a class="dropdown-item" href="{% url 'ClearList' %}">Clear List</a></li>
+            <li><a class="dropdown-item" href="{% url 'delete_all_crossed_items' %}">Delete All Crossed Items</a></li>
+            <li><hr class="dropdown-divider"></li>
+            
+            
+            <li><a class="dropdown-item" href="#">Download Workspace in =></a></li>
+            
+            <li><a class="dropdown-item" href="{% url 'generate_text_file' %}">Text File .txt</a></li>
+            <li><a class="dropdown-item" href="{% url 'generate_csv_file' %}">CSV file .csv</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="{% url 'change_user_credentials' request.user.id %}">Settings</a>
@@ -17,7 +36,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'create-index' %}">FeedBack List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'api' %}">Json or API mode</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'api' %}">JSON or API mode</a>
         </li>
        
       </ul>
