--- a/Task/templates/task/api_file.html
+++ b/Task/templates/task/api_file.html
@@ -2,15 +2,18 @@
 {% load static %}
 {% block content %}
 <div class="center-column">
-Want to learn about Json here? Want to type Json for your Tasks to get Created or Updated? This is an API or Json Wing of the app,
+Want to learn about Json here? Want to type JSON for your Tasks to get Created? This is an API or Json Wing of the app,
 written with the help of <a href="https://www.django-rest-framework.org/">Django REST framework</a>. The notable urls are:
 <br><br>
 <ul>
-    <li><a href="{% url 'api-list' %}">View your Task List's API or Json Format</a></li>
-    <li><a href="{% url 'create-api' %}">Create a Task using Json</a></li>
+    <li><a href="{% url 'api-list' %}">View your Task List's API or JSON Format</a></li>
+    <li><a href="{% url 'create-api' %}">Create a Task using JSON</a></li>
 </ul>
 <br>
-To View Details of a specific task, click the "<img src="{% static 'images/document_api.png' %}" height="30" width="50">" icon after the Task name
+To View Details of a specific task, click the "<img src="{% static 'images/document_api.png' %}" height="30" width="50">" icon after the Task name.
+<br><hr>
+Want to check more of our Products? Check our <a href="https://opensourceweather.herokuapp.com"> Weather App</a> and our <a href="https://typeandenter.herokuapp.com">Search Engine</a> and our <a href="https://opensourcedictionary.herokuapp.com"> Dictionary App</a>!! 
+
 <br>
 
 {% endblock %}
