--- a/Task/templates/navbar.html
+++ b/Task/templates/navbar.html
@@ -16,17 +16,17 @@
             <li><a class="dropdown-item" href="{% url 'index' %}">Your List</a></li>
             <li><hr class="dropdown-divider"></li>
             
-            <li><a class="dropdown-item" href="#">Options =></a></li>
+            
             
             <li><a class="dropdown-item" href="{% url 'ClearList' %}">Clear List</a></li>
             <li><a class="dropdown-item" href="{% url 'delete_all_crossed_items' %}">Delete All Crossed Items</a></li>
             <li><hr class="dropdown-divider"></li>
             
             
-            <li><a class="dropdown-item" href="#">Download Workspace in =></a></li>
             
-            <li><a class="dropdown-item" href="{% url 'generate_text_file' %}">Text File .txt</a></li>
-            <li><a class="dropdown-item" href="{% url 'generate_csv_file' %}">CSV file .csv</a></li>
+            
+            <li><a class="dropdown-item" href="{% url 'generate_text_file' %}">Download Workspace in Text File .txt</a></li>
+            <li><a class="dropdown-item" href="{% url 'generate_csv_file' %}">Download Workspace in CSV file .csv</a></li>
           </ul>
         </li>
         <li class="nav-item">
