--- a/Task/templates/task/api_file.html
+++ b/Task/templates/task/api_file.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="center-column">
-Want to learn about Json here? Want to type JSON for your Tasks to get Created? This is an API or Json Wing of the app,
+Want to learn about JSON here? Want to type JSON for your Tasks to get Created? This is an API or JSON Wing of the app,
 written with the help of <a href="https://www.django-rest-framework.org/">Django REST framework</a>. The notable urls are:
 <br><br>
 <ul>
