--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -99,7 +99,7 @@
 							</div>
 							{{ form.email }}
 						</div>
-						<font color="red"><br><center>We will email you to confirm that your account is linked up with your email once you sign up</center><br></font>
+						<font color="red"><br><center>We will email you to confirm that your account is linked up with your email once you sign up!!</center><br></font>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
