added a confirm delete user page

--- a/members/templates/registration/change.html
+++ b/members/templates/registration/change.html
@@ -16,7 +16,7 @@ To Change Password, use this <a href="{% url 'password' request.user.id %}">form
 		<input type="submit" value="Update" class="btn btn-info">
 
 <div class="d-grid gap-2">
-	<a href="{% url 'del' request.user.id %}" class="btn btn-danger">Cancel My Account</a>
+	<a href="{% url 'con' %}" class="btn btn-danger">Cancel My Account</a>
 		<a href="{% url 'index' %}"  class="btn btn-secondary">Go Back</a>
 
 	</div>
