--- a/Task/templates/navbar.html
+++ b/Task/templates/navbar.html
@@ -27,6 +27,8 @@
             
             <li><a class="dropdown-item" href="{% url 'generate_text_file' %}">Download Workspace in Text file (.txt)</a></li>
             <li><a class="dropdown-item" href="{% url 'generate_csv_file' %}">Download Workspace in CSV file (.csv)</a></li>
+            <li><a class="dropdown-item" href="{% url 'generate_pdf_file' %}">Download Workspace in PDF file (.pdf)</a></li>
+            
           </ul>
         </li>
         <li class="nav-item">
