--- a/members/templates/accounts/password_reset.html
+++ b/members/templates/accounts/password_reset.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if request.user.is_authenticated %}
+<div class="center-column">
+<center><h4>You Are Already Logged in! <a href="{% url 'index' %}">Go Back</a></h4></center>
+</div>
+{% else %}
 <div class="center-column">
     <h4>Forgotten your Password? No Problem, We will reset it for you!!</h4>
     
@@ -9,6 +14,8 @@
         {{ form.as_p }}
         <input type="submit" value="Get Email" class="btn btn-primary">
         </form>
-    </div>
+    
 
+{% endif %}
+</div>
 {% endblock %}
