--- a/members/templates/accounts/password_reset_complete.html
+++ b/members/templates/accounts/password_reset_complete.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}{% block content %}
+{% if request.user.is_authenticated %}
+<div class="center-column">
+<center><h4>You Are Already Logged in! <a href="{% url 'index' %}">Go Back</a></h4></center>
+</div>
+{% else %}
 <div class="center-column"><h1>Password set</h1><p>Your password has been set. You can <a href="{% url "login" %}">log in now
 
-</a></p></div>{% endblock %}
+</a></p></div>
+{% endif %}
+{% endblock %}
 
 
