--- a/members/templates/accounts/password_reset_confirm.html
+++ b/members/templates/accounts/password_reset_confirm.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}{% block content %}
+{% if request.user.is_authenticated %}
+<div class="center-column">
+<center><h4>You Are Already Logged in! <a href="{% url 'index' %}">Go Back</a></h4></center>
+</div>
+{% else %}
 <div class="center-column">
 <h1>Reset your password</h1>{% if validlink %}<p>Please enter your new password twice:
 
@@ -7,5 +12,6 @@
 {% else %}<p>The password reset link was invalid, possibly because it hasalready been used. 
 Please request a new password reset.</p>{% endif %}
 </div>
+{%  endif%}
 {% endblock %}
 
