--- a/members/templates/accounts/password_reset_done.html
+++ b/members/templates/accounts/password_reset_done.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if request.user.is_authenticated %}
+<div class="center-column">
+<center><h4>You Are Already Logged in! <a href="{% url 'index' %}">Go Back</a></h4></center>
+</div>
+{% else %}
 <div class="center-column">
 We've emailed you instructions for setting your password.
 
@@ -8,4 +13,5 @@ If you don't receive an email, please make sure you've entered the correct addre
 that multiple users don't share the common email!
 </p>
 </div>
+{% endif %}
 {% endblock %}
