--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -101,13 +101,15 @@
 							</div>
 							<input type="text" name="username" placeholder="Username..." class="form-control">
 						</div>
+						
 						<div class="input-group mb-2">
 							<div class="input-group-append">
+								
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
 								<input type="password" name="password" placeholder="Password..." class="form-control" >
 						</div>
-
+						Forgot your Password? <a href="{% url 'password_reset'  %}">Reset Now</a>!
 							<div class="d-flex justify-content-center mt-3 login_container">
 				 				<input class="btn login_btn" type="submit" value="Login">
 				   			</div>
