improved mailings and navigation

--- a/members/templates/accounts/password_reset.html
+++ b/members/templates/accounts/password_reset.html
@@ -13,6 +13,9 @@
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Get Email" class="btn btn-primary">
+        <div class="d-grid gap-2">
+        <a href="{% url 'login' %}" class="btn btn-secondary">Go Back</a>
+        </div>
         </form>
     
 
