--- a/Task/templates/navbar.html
+++ b/Task/templates/navbar.html
@@ -48,6 +48,9 @@
     </div>
     {% else %}
     <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'create-index' %}">FeedBack List</a>
         </li>
     {% endif %}
